--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "clsx": "^1.2.1",
     "escape-string-regexp": "^5.0.0",
     "fast-glob": "^3.3.1",
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.4.1",
     "framer-motion": "^10.16.4",
     "next": "^13.5.6",
     "react": "18.2.0",
