Login and sign up with email/password implemented

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.4.16",
+    "@types/bcryptjs": "^2.4.5",
     "@types/mdx": "^2.0.9",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
@@ -22,11 +23,14 @@
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
     "autoprefixer": "^10.4.16",
+    "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
     "escape-string-regexp": "^5.0.0",
     "fast-glob": "^3.3.1",
     "firebase-admin": "^11.11.0",
     "framer-motion": "^10.16.4",
+    "mongodb": "^6.2.0",
+    "mongoose": "^8.0.0",
     "next": "^13.5.6",
     "next-auth": "^4.24.4",
     "react": "18.2.0",
