--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.4.16",
+    "@nextui-org/dropdown": "^2.1.15",
+    "@nextui-org/react": "^2.2.8",
     "@types/bcryptjs": "^2.4.5",
     "@types/mdx": "^2.0.9",
     "@types/node": "20.5.0",
